# APK-Editor-Py

./: .gitattributes  README.md  codebase_review.txt  pyproject.toml
src/apk_editor/: __init__.py  apk.py  arsc.py  constants.py  dependencies.py  logger.py  sign.py  smali.py  utils.py
src/apk_editor/smali/: method.py  smali_file.py  smali_utils.py
tests/apks/: open_recents.apk
tests/integration/: test_apk.py
tests/keys/: cert.x509.pem  key.pk8
tests/unit/: test_get_info.py  test_sign_apk.py
