[project]
name = "apk-editor"
version = "0.1.5"
description = "apkeditor.jar wrapper written in python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["appdirs>=1.4.4", "psutil>=6.1.0", "requests>=2.32.3"]

[project.scripts]
apkeditor-deps = "apk_editor.dependencies:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.3"]
